# voxcpm-fastapi

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.amd64  Makefile  README.md  main.py  py2so.py  pyproject.toml  requirements-pypi.txt  requirements-voxcpm.txt  run.py
server/: config.py  logger.py  main.py  utils.py
server/apis/: audio.py  models.py  v1.py  voices.py
tests/: example.py
voices/: en_female_neko.json  en_male_musk.json  en_male_trump.json  zh-CN_female_streamer.json  zh-CN_female_teacher.json  zh-CN_male_yspy.json
