[project]
name = "voxcpm-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.2.2",
    "fastapi>=0.124.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "uvicorn[standard]>=0.38.0",
]
